full basic cycle for upload/download cv

--- a/recruit-gui/src/app/view-candidates/view-candidates.component.html
+++ b/recruit-gui/src/app/view-candidates/view-candidates.component.html
@@ -83,7 +83,7 @@
 	      		<tr *ngFor="let candidate of candidates">
 	      			<td class="candidate-tab-col">
 						<span class="material-icons">
-	      					<a class="currliculum-link" href="{{getCurriculumDownloadUrl('0')}}" >
+	      					<a class="currliculum-link" href="{{getCurriculumDownloadUrl(candidate.candidateId)}}" >
 	      						insert_drive_file
 	      					</a>
 	      				</span>
