--- a/recruit-gui/src/app/login-user/login-user.component.css
+++ b/recruit-gui/src/app/login-user/login-user.component.css
@@ -14,7 +14,6 @@
     text-align:left;
     margin-right:5px;
     margin-bottom:5px;
-
 }
 
 input{
@@ -23,4 +22,48 @@ input{
 
 .loginbutton{
     width:300px;
+}
+
+.modal-header{
+    background: #303030;
+    font-size: medium;
+    height: 50px;
+    text-align:center;
+    width:500px;
+    padding:0px;
+    margin:0px;
+}
+
+.modal-header-text{
+    text-align:center;
+    color:#6f42c1;
+    margin-top:10px;
+    width:500px;
+}
+
+.modal-body{
+	margin-top:100px;
+	font-size: large;
+    height:200px;
+    text-align: center;
+}
+
+.modal-body-text{
+    vertical-align: middle;
+    margin-top: 60px;
+    font-weight: bold;
+}
+
+ .modal-header{
+     background:#181414;
+     color:#6A5ACD;
+     font-weight:bold;
+ }
+
+ .filter-close-box{
+     padding:10px;
+     cursor:pointer;
+     font-size:20px;
+     font-weight: bold;
+    text-align: right;  
 }
