skill col GUI candidate view aligh left

--- a/recruit-gui/src/app/view-candidates/view-candidates.component.html
+++ b/recruit-gui/src/app/view-candidates/view-candidates.component.html
@@ -98,7 +98,7 @@
 	                <td class="candidate-tab-col lang-col">{{candidate.getDutch()}}</td>
 	                <td class="candidate-tab-col lang-col">{{candidate.getEnglish()}}</td>
 	                <td class="candidate-tab-col lang-col">{{candidate.getFrench()}}</td>
-	                <td class="candidate-tab-col">{{candidate.getSkills()}}</td>
+	                <td class="candidate-tab-col skills-col">{{candidate.getSkills()}}</td>
 	      		</tr>	
 	      	</tbody>
 		</table>
