--- a/recruit-gui/src/app/home/home.component.html
+++ b/recruit-gui/src/app/home/home.component.html
@@ -3,25 +3,26 @@
         <div class="center-table">
             <div class="row">
                 <div class="col">
-                    <h2>Over 350 ICT Candidates available</h2>
+                    <h2>Over 400 ICT Candidates available</h2>
                     <p>
                     Are you a recruiter looking for ICT candidates in the Netherlands, Belgium or the UK? Arenella ICT recruitment
-                    offers you access to a large number of ICT candidates activelly looking for a new role. We have both Freelancers 
+                    offers you access to a large number of ICT candidates actively looking for a new role. We have both Freelancer's 
                     and Permanent candidates available.
                     </p>
                     <p>
-                        Over 200 ICT candidates available accross the Netherlands, Belgium and 
+                        Over 400 ICT candidates available across the Netherlands, Belgium and 
                         UK markets
                     </p>
                     <p>
-                        All candidates are local, hand picked and  native or have vaid work vias.
+                        All candidates are local, hand picked and either native or have valid work visas.
                     </p>
                     <p>
                         Our ICT candidates speak diverse languages, including Dutch, English and French
                     </p>
                     <p>
-                        Both freelance and perm candidates are available for a variety of ICT roles such as 
+                        Both freelance and permanent candidates are available for a variety of ICT roles such as 
                     </p>
+                    
                     <div class="row">
                         <div class="col">
                             <ul class="skill">
@@ -50,8 +51,10 @@
                     <p>We provide access to suitable ICT candidates</p>
                     <p>If you place the candidate you set up the contract direct with them. There are no chains </p>
                     <p>You let us know how many hours the candidate has worked each month</p>
-                    <p>For freelance ICT candidates we send you an invoice each months for the  hours worked.</p>
-                    <p>For permanent ICT candidates we send you a single invoice when you place the candidade.</p>
+                    <p>For freelance ICT candidates we send you an invoice each months for the hours worked.</p>
+                    <p>For permanent ICT candidates we send you a single invoice when you place the candidate.</p>
+                   	<p>100% free up until the point you have placed the candidate</p>
+                    <p>You are able to download the CVs via the website and contact the candidates directly</p>
                     <h2>How to get started</h2>
                     <p>Email: kparkings@gmail.com to receive a free user account.</p>
                 </div>
