--- a/recruit-gui/src/app/view-candidates/view-candidates.component.css
+++ b/recruit-gui/src/app/view-candidates/view-candidates.component.css
@@ -9,7 +9,13 @@
     margin-right:95px;
  }
 
- .candidate-nav{
+.modal-label-right{
+	text-align:right;
+	padding-right:20px;	
+	float:right;
+}
+
+.candidate-nav{
      cursor:pointer;
      color:blue;
      font-weight:bold;
