available candidate stats

--- a/recruit-gui/src/app/home/home.component.html
+++ b/recruit-gui/src/app/home/home.component.html
@@ -3,14 +3,14 @@
         <div class="center-table">
             <div class="row">
                 <div class="col">
-                    <h2>Over 400 ICT Candidates available</h2>
+                    <h2> {{totalNumberActiveCandidates}} ICT Candidates available</h2>
                     <p>
                     Are you a recruiter looking for ICT candidates in the Netherlands, Belgium or the UK? Arenella ICT recruitment
                     offers you access to a large number of ICT candidates actively looking for a new role. We have both Freelancer's 
                     and Permanent candidates available.
                     </p>
                     <p>
-                        Over 400 ICT candidates available across the Netherlands, Belgium and 
+                        {{totalNumberActiveCandidates}} ICT candidates available across the Netherlands, Belgium and 
                         UK markets
                     </p>
                     <p>
