--- a/recruit-gui/src/app/statistics/statistics.component.html
+++ b/recruit-gui/src/app/statistics/statistics.component.html
@@ -35,6 +35,19 @@
 					</div>
 				</td>
 			</tr>		
+			<tr>
+				<td>
+					<h3>Totals:</h3>
+					<table>
+						<tr>
+							<td>Active Users</td>
+							<td>{{totalNumberActiveCandidates}}</td>
+						</tr>
+					</table>
+				</td>
+				<td>
+				</td>
+			</tr>
 		</table>
 		
 	</div>
