pdf and doc content extraction

--- a/recruit-gui/src/app/statistics/statistics.component.html
+++ b/recruit-gui/src/app/statistics/statistics.component.html
@@ -2,10 +2,10 @@
 
 	<ul class="nav nav-tabs">
 	  <li class="nav-item">
-	    <span class="nav-link statsChartTab" (click)="switchTab('downloads')">Active</span>
+	    <span class="nav-link statsChartTab" (click)="switchTab('downloads')">Downloads</span>
 	  </li>
 	  <li class="nav-item statsChartTab">
-	    <span class="nav-link" (click)="switchTab('availability')">Link</span>
+	    <span class="nav-link" (click)="switchTab('availability')">Availability</span>
 	  </li>
 	</ul>
 
