--- a/recruit-gui/src/app/app.component.html
+++ b/recruit-gui/src/app/app.component.html
@@ -17,6 +17,9 @@
  		<li class="nav-item" *ngIf="isAuthenticatedAsAdmin()">
            <a  class="dropdown-item" routerLink="/new-candidate">New Candidate</a>
         </li>
+		<li class="nav-item" *ngIf="isAuthenticatedAsAdmin()">
+           <a  class="dropdown-item" routerLink="/accounts">Accounts</a>
+        </li>
       </ul>
   </div>
 </nav>
