--- a/recruit-gui/src/app/statistics/statistics.component.html
+++ b/recruit-gui/src/app/statistics/statistics.component.html
@@ -32,6 +32,10 @@
 				<td>
 					<div class="chart-wrapper"  style="width:600px;">
 						<h3>Recruiter downloads</h3>
+						<button (click)="switchChartData('total')">Total</button>
+						<button (click)="switchChartData('month')">Monthly</button>
+						<button (click)="switchChartData('week')">Weekly</button>
+						<button (click)="switchChartData('day')">Daily</button>
 		    			<canvas baseChart 
 		        				[datasets]="recruiterDownloadsChartData" 
 		        				[labels]="recruiterDownloadsChartLabels" 
