--- a/recruit-gui/src/app/app.component.html
+++ b/recruit-gui/src/app/app.component.html
@@ -20,6 +20,9 @@
 		<li class="nav-item" *ngIf="isAuthenticatedAsAdmin()">
            <a  class="dropdown-item" routerLink="/accounts">Accounts</a>
         </li>
+		<li class="nav-item">
+           <a class="dropdown-item candidate-signup" routerLink="/create-candidate">Candidate Signup</a>
+        </li>
       </ul>
   </div>
 </nav>
