--- a/recruit-gui/src/app/app.component.html
+++ b/recruit-gui/src/app/app.component.html
@@ -20,7 +20,7 @@
 		<li class="nav-item" *ngIf="isAuthenticatedAsAdmin()">
            <a  class="dropdown-item" routerLink="/accounts">Accounts</a>
         </li>
-		<li class="nav-item">
+		<li class="nav-item" *ngIf="!isAuthenticated()">
            <a class="dropdown-item candidate-signup" routerLink="/create-candidate">Candidate Signup</a>
         </li>
       </ul>
