--- a/recruit-gui/src/app/new-candidate/new-candidate.component.css
+++ b/recruit-gui/src/app/new-candidate/new-candidate.component.css
@@ -31,6 +31,11 @@
     
 }
 
+.pendingCandidateRow:hover{
+	background:#6f42c1;
+	color:white;
+}
+
 .feedbackBox{
     width:200px;
     height:350px;
