--- a/recruit-gui/src/app/home/home.component.html
+++ b/recruit-gui/src/app/home/home.component.html
@@ -6,7 +6,7 @@
                     <h2> {{totalNumberActiveCandidates}} ICT Candidates available</h2>
                     <p>
                     Are you a recruiter looking for ICT candidates in the Netherlands, Belgium or the UK? Arenella ICT recruitment
-                    offers you access to a large number of ICT candidates actively looking for a new role. We have both Freelancer's 
+                    offers you access to a large number of ICT candidates actively looking for a new role. We have both Freelancers 
                     and Permanent candidates available.
                     </p>
                     <p>
