--- a/recruit-gui/src/app/accounts/accounts.component.html
+++ b/recruit-gui/src/app/accounts/accounts.component.html
@@ -2,6 +2,9 @@
 
 	<ul class="nav nav-tabs">
 	  <li class="nav-item">
+	    <span class="nav-link tabNav" (click)="switchTab('recruitersCreate')">Create Recruiter</span>
+	  </li>
+	  <li class="nav-item">
 	    <span class="nav-link tabNav" (click)="switchTab('recruiters')">Recruiters</span>
 	  </li>
 	  <li class="nav-item tabNav">
@@ -13,19 +16,37 @@
 	</ul>
 	
 	<!-- Recruiters-->
-	<div *ngIf="showRecruitersTab">
+	<div *ngIf="showRecruitersCreateTab">
 		<h3>Create Account</h3>
 		<form [formGroup]="createRecruiterAccountForm">
-			<table class="table create-recruiter-account-table">
+			<table class="table candidate-table">
+				<thead>
+					<tr>
+						<th><label>Username</label></th>
+						<th><label>Name</label></th>
+						<th><label>Surname</label></th>
+						<th><label>Email</label></th>
+						<th><label>Company</label></th>
+						<th><label>Language</label></th>
+						<th><label>Actions</label></th>
+					</tr>
+				</thead>
 				<tr>
+					<td><input type="input" formControlName="proposedUserName"/></td>
+					<td><input type="input" formControlName="firstName"/></td>
+					<td><input type="input" formControlName="surname"/></td>
+					<td><input type="input" formControlName="email"/></td>
+					<td><input type="input" formControlName="companyName"/></td>
 					<td>
-						<label>Username</label>
+						<select formControlName="language">
+							<option value="ENGLISH">English</option>
+							<option value="DUTCH">Dutch</option>
+							<option value="FRENCH">French</option>
+						</select>
 					</td>
+					
 					<td>
-						<input type="input" formControlName="proposedUserName"/>
-					</td>
-					<td>
-						<button (click)="createRecruiterAccount()">Create Account</button>
+						<button (click)="createRecruiterAccount()">Create</button>
 					</td>
 				</tr>
 				<tr *ngIf="createAccountDetailsAvailable">
@@ -44,10 +65,57 @@
 						{{recruiterPassword}}
 					</td>
 				</tr>
+				
 			</table>
 		</form>
+		
 	</div>
-	
+
+	<!-- Recruiters-->
+	<div *ngIf="showRecruitersTab">
+		<h3>Recruiters: Total: {{recruiterCount}}</h3>
+		
+			<div>
+      
+		<table class="table candidate-table">
+			<thead>
+	      		<tr>
+	      			<!-- Table Headers -->
+	      			<th class="bg-tab-hdr">User Id</th>
+	      			<th class="bg-tab-hdr">Firstname</th>
+	                <th class="bg-tab-hdr">Surname</th>
+	                <th class="bg-tab-hdr">Email</th>
+	                <th class="bg-tab-hdr">Company</th>
+	                <th class="bg-tab-hdr">Actions</th>
+	      		</tr>
+	      	</thead>
+	      	<tbody>
+	      		<!-- Table row -->
+	      		<tr *ngFor="let recruiter of recruiters">
+	      			<td class="candidate-tab-col"><span class="candidate-id-prefix"></span>{{recruiter.userId}}</td>
+	                <td class="candidate-tab-col mini-col"> {{recruiter.firstName}}</td>
+	                <td class="candidate-tab-col medicol">{{recruiter.surname}}</td>
+	                <td class="candidate-tab-col medicol">{{recruiter.email}}</td>
+	                <td class="candidate-tab-col medicol">{{recruiter.companyName}}</td>
+	                <td class="candidate-tab-col medicol">
+	               <!--  
+	                	<div [ngSwitch]="recruiter.active">
+	                		<div  *ngSwitchCase="true">
+	                			<button	class="control-spacing" (click)="disableCandidate(recruiter.userId)">Disable</button>
+	                		</div>
+	                		<div  *ngSwitchCase="false">
+	                			<button	class="control-spacing" (click)="disableCandidate(recruiter.userId)">Enable</button>
+	                		</div>
+	                	</div>
+	               -->
+	                </td>
+	      		</tr>	
+	      	</tbody>
+		</table>
+	</div>
+	</div>
+	</div>
+		
 	<!-- Candidates-->
 	<div *ngIf="showCandidatesTab">
 		<form [formGroup]="candidateFormGroup">
