--- a/recruit-gui/src/app/login-user/login-user.component.html
+++ b/recruit-gui/src/app/login-user/login-user.component.html
@@ -1,4 +1,8 @@
-<form [formGroup]="formBean">
+<div>
+	<div class="centerdiv">
+		<div class="center-table">
+    
+    		<form [formGroup]="formBean">
 
 	<div class=".container m-2">
 
@@ -47,3 +51,9 @@
 		</div>       
 	</div>
 </ng-template>
+
+     	</div>
+    </div>
+</div>
+
+
