--- a/recruit-gui/src/app/recruiter-listings/recruiter-listings.component.html
+++ b/recruit-gui/src/app/recruiter-listings/recruiter-listings.component.html
@@ -48,7 +48,7 @@
 												<select formControlName="type">
 													<option></option>
 													<option value="CONTRACT_ROLE">Contract</option>
-													<option value="PERM_ROME">Perm</option>
+													<option value="PERM_ROLE">Perm</option>
 													<option value="BOTH">Contract/Perm</option>
 												</select>
 											</td>
