--- a/recruit-gui/src/app/app.component.html
+++ b/recruit-gui/src/app/app.component.html
@@ -2,39 +2,43 @@
   <h1>Arenella ICT Candidate Recruitment</h1>
 </nav>
 
-<nav class="navbar navbar-expand-lg xx">
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0 nav-secondary">
-        <li class="nav-item" *ngIf="!isAuthenticated()">
+<div>
+
+	<ul class="arenella-navbar">
+      
+		<li  class="li-arenella-nav" *ngIf="!isAuthenticated()">
            <a  class="dropdown-item" routerLink="/">Home</a>
         </li>
-        <li class="nav-item">
+        <li  class="li-arenella-nav">
            <a  class="dropdown-item" routerLink="/view-candidates">View Candidates</a>
         </li>
-        <li class="nav-item" *ngIf="isAuthenticatedAsAdmin()">
+        <li  class="li-arenella-nav" *ngIf="isAuthenticatedAsAdmin()">
            <a  class="dropdown-item" routerLink="/statistics">Statistics</a>
         </li>
- 		<li class="nav-item" *ngIf="isAuthenticatedAsAdmin()">
+ 		<li  class="li-arenella-nav" *ngIf="isAuthenticatedAsAdmin()">
            <a  class="dropdown-item" routerLink="/new-candidate">New Candidate</a>
         </li>
-		<li class="nav-item" *ngIf="isAuthenticatedAsAdmin()">
+		<li class="li-arenella-nav" *ngIf="isAuthenticatedAsAdmin()">
            <a  class="dropdown-item" routerLink="/accounts">Accounts</a>
         </li>
-		<li class="nav-item" *ngIf="!isAuthenticated()">
+		<li class="li-arenella-nav" *ngIf="!isAuthenticated()">
            <a class="dropdown-item candidate-signup" routerLink="/create-candidate">Candidate Signup</a>
         </li>
-		<li class="nav-item" *ngIf="isAuthenticated() && !isAuthenticatedAsAdmin()">
+		<li class="li-arenella-nav" *ngIf="isAuthenticated() && !isAuthenticatedAsAdmin()">
            <a class="dropdown-item recruiter-account" routerLink="/recruiter-account">Manage Account</a>
         </li>
-		<li class="nav-item" *ngIf="isAuthenticated() && !isAuthenticatedAsAdmin()">
+		<li class="li-arenella-nav" *ngIf="isAuthenticated() && !isAuthenticatedAsAdmin()">
            <a class="dropdown-item recruiter-account" routerLink="/recruiter-listings">Manage Job Listings</a>
         </li>
+
       </ul>
-  </div>
-</nav>
+
+</div>
 
 <router-outlet></router-outlet>
 
+<!--
 <nav class="footer">
  <p>Email: kparkings@gmail.com</p>
 </nav>
+-->
