--- a/recruit-gui/src/app/login-user/login-user.component.css
+++ b/recruit-gui/src/app/login-user/login-user.component.css
@@ -1,8 +1,3 @@
-.login-table{
-    margin:0 auto;
-    width:700px;
-    margin-top:200px;
-}
 
 .leftcol{
     text-align:right;
@@ -66,4 +61,16 @@ input{
      font-size:20px;
      font-weight: bold;
     text-align: right;  
+}
+
+.centerdiv{
+    margin: 0 auto;
+    padding-left:10px;
+    padding-right:10px;
+    width:90%;
+}
+
+.center-table{
+    margin:0 auto;
+    margin-top:200px;
 }
