IT Recruiter function added

--- a/recruit-gui/src/app/home/home.component.html
+++ b/recruit-gui/src/app/home/home.component.html
@@ -41,6 +41,7 @@
                                 <li>Solution Architects</li>
                                 <li>Network Engineers</li>
                                 <li>QA Test engineers</li>
+                                <li>IT Recruiters</li>
                             </ul>
                         </div>
                     </div>
